# Quorp

./: AGENT_SUPPORT.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  justfile
.cargo/: ci-config.toml
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_ui.rs
crates/extension_api/: Cargo.toml  PENDING_CHANGES.md  README.md
crates/extension_api/src/: extension_api.rs  http_client.rs  process.rs  settings.rs
crates/gpui_platform/: Cargo.toml
crates/gpui_platform/src/: gpui_platform.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: proto.rs  typed_envelope.rs
crates/quorp/: Cargo.toml  build.rs
crates/quorp/resources/windows/: zed.iss
crates/quorp/src/: main.rs  main.rsg  quorp.rs  reliability.rs  visual_test_runner.rs
crates/quorp/src/quorp/: agent_local.rs  agent_runner.rs  app_menus.rs  benchmark.rs  cli.rs  cli_demos.rs  cli_runtime.rs  codex_executor.rs  docker.rs  edit_prediction_registry.rs  executor.rs  inline_composer.rs  mac_only_instance.rs  memory_fingerprint.rs  open_listener.rs  open_url_modal.rs  prompt_compaction.rs  provider_config.rs  quick_action_bar.rs  remote_debug.rs  run_support.rs  telemetry_log.rs  tui.rs  tui.rsg  visual_tests.rs  windows_only_instance.rs
crates/quorp/src/quorp/benchmark/: engine.rs  probe.rs  reporting.rs  state.rs  tests.rs
crates/quorp/src/quorp/quick_action_bar/: repl_menu.rs
crates/quorp/src/quorp/tui/: action_discovery.rs  agent_context.rs  agent_pane.rs  agent_protocol.rs  agent_runtime.rs  agent_turn.rs  app.rs  app.rsg  assistant_transcript.rs  attention_lease.rs  bootstrap_loader.rs  bridge.rs  buffer_png.rs  chat.rs  chat_service.rs  chrome.rs  chrome_v2.rs  chrome_v2.rsg  command_bridge.rs  command_runner.rs  diagnostics.rs  diff_reactor.rs  editor_pane.rs  engage_target.rs  file_tree.rs  hitmap.rs  hitmap.rsg  local_model_program.rs  mcp_client.rs  mention_links.rs  model_registry.rs  models_pane.rs  native_backend.rs  openai_compatible_client.rs  paint.rs  path_guard.rs  path_index.rs  path_index_bridge.rs  proof_rail.rs  rail_event.rs  (+16 more)
crates/quorp/src/quorp/tui/chat_service/: provider.rs  request.rs  tools_schema.rs  turn_parse.rs
crates/quorp/src/quorp/tui/native_backend/: actions.rs  execute_action.rs  process_browser.rs  tests.rs
crates/quorp_agent_core/: Cargo.toml
crates/quorp_agent_core/src/: agent_context.rs  agent_protocol.rs  agent_turn.rs  agent_turn_metadata.rs  ledger.rs  lib.rs  mention_links.rs  path_guard.rs  runtime.rs
crates/quorp_agent_core/src/agent_turn/: render.rs  tests.rs
crates/quorp_agent_core/src/runtime/: action_summary.rs  benchmark_playbooks.rs  compaction.rs  confusion_detector.rs  context_budget.rs  evidenceboard.rs  no_progress.rs  normalize.rs  parse_helpers.rs  path_intel.rs  recovery.rs  state_allow.rs  state_messages.rs  state_observe.rs  state_record.rs  state_validate.rs  suggestions.rs  tests.rs  tests_chunk_00.rs  tests_chunk_01.rs  tests_chunk_02.rs  tests_chunk_03.rs  tests_chunk_05.rs  tests_chunk_06.rs  tool_payload.rs  turn.rs  write_readiness.rs  write_routing.rs
crates/quorp_agent_protocol/: Cargo.toml
crates/quorp_agent_protocol/src/: quorp_agent_protocol.rs
crates/quorp_benchmark/: Cargo.toml
crates/quorp_benchmark/src/: challenge_prep.rs  challenge_run.rs  challenge_workspace.rs  evaluation.rs  lib.rs  oracle_playbooks.rs  reporting.rs  reporting_types.rs  resolution.rs  rustbench.rs  scoring.rs  workspace.rs
crates/quorp_benchmark/src/oracle_playbooks/: rust_swebench_top5.rs
crates/quorp_config/: Cargo.toml
crates/quorp_config/src/: lib.rs
crates/quorp_context/: Cargo.toml
crates/quorp_context/src/: compaction.rs  handles.rs  index.rs  pressure.rs  prompt_frame.rs  provenance.rs  quorp_context.rs
crates/quorp_context_model/: Cargo.toml
crates/quorp_context_model/src/: context_budget.rs  quorp_context_model.rs  state_packet.rs
crates/quorp_core/: Cargo.toml
crates/quorp_core/src/: lib.rs  skills.rs  validation_planner.rs
crates/quorp_desktop_core/: Cargo.toml
crates/quorp_desktop_core/src/: app_state.rs  artifact_store.rs  diff_applier.rs  doctor.rs  event_bridge.rs  memory_adapter.rs  permission_broker.rs  provider_registry.rs  quorp_desktop_core.rs  replay_service.rs  rollback.rs  rules_adapter.rs  run_service.rs  secret_keychain.rs  trust_store.rs  workspace_registry.rs
crates/quorp_desktop_ipc/: Cargo.toml
crates/quorp_desktop_ipc/src/: artifact_dto.rs  desktop_event.rs  error_dto.rs  permission_dto.rs  quorp_desktop_ipc.rs  run_request.rs  settings_dto.rs  workspace_dto.rs
crates/quorp_ids/: Cargo.toml
crates/quorp_ids/src/: quorp_ids.rs
crates/quorp_lsp/: Cargo.toml
crates/quorp_lsp/src/: quorp_lsp.rs  rust_language_server.rs
crates/quorp_mcp/: Cargo.toml
crates/quorp_mcp/src/: quorp_mcp.rs
crates/quorp_memory/: Cargo.toml
crates/quorp_memory/src/: quorp_memory.rs
crates/quorp_patch_vm/: Cargo.toml
crates/quorp_patch_vm/src/: amplification.rs  quorp_patch_vm.rs  semantic.rs  write_lease.rs
crates/quorp_permissions/: Cargo.toml
crates/quorp_permissions/src/: quorp_permissions.rs
crates/quorp_plan_mode/: Cargo.toml
crates/quorp_plan_mode/src/: quorp_plan_mode.rs
crates/quorp_provider/: Cargo.toml
crates/quorp_provider/src/: lib.rs  openai_compatible_client.rs
crates/quorp_render/: Cargo.toml
crates/quorp_render/src/: caps.rs  logo.rs  palette.rs  permission_modal.rs  quorp_render.rs  session.rs  shell.rs  shimmer.rs  splash.rs  status_footer.rs  transcript.rs
crates/quorp_repair/: Cargo.toml
crates/quorp_repair/src/: failure.rs  patch_lease.rs  planner.rs  policy.rs  progress.rs  quorp_repair.rs
crates/quorp_repo_graph/: Cargo.toml
crates/quorp_repo_graph/src/: quorp_repo_graph.rs
crates/quorp_repo_scan/: Cargo.toml
crates/quorp_repo_scan/src/: quorp_repo_scan.rs
crates/quorp_rule_forge/: Cargo.toml
crates/quorp_rule_forge/src/: quorp_rule_forge.rs
crates/quorp_rust_intel/: Cargo.toml
crates/quorp_rust_intel/src/: quorp_rust_intel.rs
crates/quorp_sandbox/: Cargo.toml
crates/quorp_sandbox/src/: lib.rs  macos_apple_sandbox.rs
(+1286 files in other folders)
