[workspace]
resolver = "2"
members = [
    "crates/assets",
    "crates/activity_indicator",
    "crates/agent_ui",
    "crates/auto_update_ui",
    "crates/client",
    "crates/clock",
    "crates/collections",
    "crates/db",
    "crates/fs",
    "crates/fuzzy",
    "crates/git",
    "crates/gpui",
    "crates/gpui_linux",
    "crates/gpui_macos",
    "crates/gpui_macros",
    "crates/gpui_platform",
    "crates/gpui_tokio",
    "crates/gpui_util",
    "crates/gpui_wgpu",
    "crates/gpui_windows",
    "crates/language",
    "crates/language_model",
    "crates/language_models",
    "crates/lsp",
    "crates/multi_buffer",
    "crates/node_runtime",
    "crates/paths",
    "crates/perf",
    "crates/pet",
    "crates/pet-conda",
    "crates/pet-core",
    "crates/pet-fs",
    "crates/pet-poetry",
    "crates/pet-reporter",
    "crates/pet-virtualenv",
    "crates/project",
    "crates/proto",
    "crates/release_channel",
    "crates/rope",
    "crates/rpc",
    "crates/session",
    "crates/settings",
    "crates/sqlez",
    "crates/sqlez_macros",
    "crates/sum_tree",
    "crates/telemetry",
    "crates/terminal",
    "crates/tree-sitter-gowork",
    "crates/text",
    "crates/theme",
    "crates/util",
    "crates/quorp",
    "crates/worktree",
    "crates/zlog",
    "crates/zlog_settings",
    "crates/ztracing",
    "crates/ztracing_macro",
]
default-members = ["crates/quorp"]

[workspace.package]
publish = false
edition = "2021"
rust-version = "1.82"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("schemars"))'] }

[workspace.dependencies]
acp_thread = { path = "crates/acp_thread" }
acp_tools = { path = "crates/acp_tools" }
action_log = { path = "crates/action_log" }
activity_indicator = { path = "crates/activity_indicator" }
agent = { path = "crates/agent" }
agent-client-protocol = "=0.10.2"
agent_servers = { path = "crates/agent_servers" }
agent_settings = { path = "crates/agent_settings" }
agent_ui = { path = "crates/agent_ui" }
aho-corasick = "=1.1.3"
ai_onboarding = { path = "crates/ai_onboarding" }
alacritty_terminal = "=0.25.1"
anthropic = { path = "crates/anthropic" }
anyhow = "=1.0.100"
ashpd = "=0.13.2"
askpass = { path = "crates/askpass" }
assets = { path = "crates/assets" }
assistant_slash_command = "=0.1.0"
assistant_text_thread = "=0.1.0"
async-channel = "=2.5.0"
async-compression = "=0.4.32"
async-fs = "=2.2.0"
async-lock = "=3.4.2"
async-pipe = "=0.1.3"
async-tar = "=0.5.1"
async-task = "=4.7.1"
async-trait = "=0.1.89"
async-tungstenite = "=0.31.0"
async_zip = "=0.0.18"
audio = { path = "crates/audio" }
auto_update = { path = "crates/auto_update" }
auto_update_ui = { path = "crates/auto_update_ui" }
aws-config = "=1.8.10"
aws-credential-types = "=1.2.10"
aws-sdk-bedrockruntime = "=1.113.0"
aws-smithy-runtime-api = "=1.9.2"
aws-smithy-types = "=1.3.4"
aws_http_client = { path = "crates/aws_http_client" }
backtrace = "=0.3.76"
base64 = "=0.22.1"
bedrock = { path = "crates/bedrock" }
bitflags = "=2.10.0"
breadcrumbs = "=0.1.0"
brush-parser = "=0.3.0"
buffer_diff = { path = "crates/buffer_diff" }
bytes = "=1.11.1"
call = { path = "crates/call" }
cargo_metadata = "=0.19.2"
cargo_toml = "=0.21.0"
cfg-if = "=1.0.4"
channel = { path = "crates/channel" }
chardetng = "=0.1.17"
chrono = "=0.4.42"
ciborium = "=0.2.2"
circular-buffer = "=1.2.0"
clap = "=4.5.49"
cli = { path = "crates/cli" }
client = { path = "crates/client" }
clock = { path = "crates/clock" }
cloud_api_client = { path = "crates/cloud_api_client" }
cloud_api_types = { path = "crates/cloud_api_types" }
cloud_llm_client = { path = "crates/cloud_llm_client" }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
codestral = { path = "crates/codestral" }
collab = { path = "crates/collab" }
collab_ui = "=0.1.0"
collections = { path = "crates/collections" }
command_palette = "=0.1.0"
command_palette_hooks = { path = "crates/command_palette_hooks" }
component = { path = "crates/component" }
component_preview = "=0.1.0"
context_server = { path = "crates/context_server" }
convert_case = "=0.11.0"
copilot = { path = "crates/copilot" }
copilot_chat = { path = "crates/copilot_chat" }
copilot_ui = { path = "crates/copilot_ui" }
core-foundation = "=0.10.0"
core-foundation-sys = "=0.8.7"
core-video = "=0.5.2"
cpal = "=0.17.1"
crash-handler = "=0.6.3"
crashes = { path = "crates/crashes" }
credentials_provider = { path = "crates/credentials_provider" }
criterion = "=0.5.1"
crossbeam = "=0.8.4"
csv_preview = "=0.1.0"
ctor = "=0.4.3"
dap = { path = "crates/dap" }
dap-types = "=0.0.1"
dap_adapters = "=0.1.0"
dashmap = "=6.1.0"
db = { path = "crates/db" }
debug_adapter_extension = { path = "crates/debug_adapter_extension" }
debugger_tools = "=0.1.0"
debugger_ui = "=0.1.0"
deepseek = { path = "crates/deepseek" }
derive_more = "=2.1.1"
derive_refineable = { path = "crates/refineable/derive_refineable" }
dev_container = { path = "crates/dev_container" }
diagnostics = "=0.1.0"
dirs = "=6.0.0"
documented = "=0.9.2"
dotenvy = "=0.15.7"
dunce = "=1.0.5"
ec4rs = "=1.2.0"
edit_prediction = { path = "crates/edit_prediction" }
edit_prediction_context = { path = "crates/edit_prediction_context" }
edit_prediction_types = { path = "crates/edit_prediction_types" }
edit_prediction_ui = { path = "crates/edit_prediction_ui" }
editor = "=0.1.0"
encoding_rs = "=0.8.35"
encoding_selector = "=0.1.0"
env_logger = "=0.11.8"
etw_tracing = { path = "crates/etw_tracing" }
eval_utils = { path = "crates/eval_utils" }
exec = "=0.3.1"
extension = { path = "crates/extension" }
extension_host = { path = "crates/extension_host" }
extensions_ui = "=0.1.0"
fancy-regex = "=0.17.0"
feature_flags = { path = "crates/feature_flags" }
feedback = "=0.1.0"
file_finder = "=0.1.0"
file_icons = { path = "crates/file_icons" }
flash_moe_defaults = { path = "crates/flash_moe_defaults" }
fork = "=0.4.0"
fs = { path = "crates/fs" }
futures = "=0.3.31"
futures-concurrency = "=7.7.1"
futures-lite = "=2.6.1"
fuzzy = { path = "crates/fuzzy" }
gh-workflow = "=0.8.0"
git = { path = "crates/git" }
git2 = "=0.20.4"
git_graph = { path = "crates/git_graph" }
git_hosting_providers = { path = "crates/git_hosting_providers" }
git_ui = { path = "crates/git_ui" }
globset = "=0.4.17"
go_to_line = "=0.1.0"
google_ai = { path = "crates/google_ai" }
gpui = { path = "crates/gpui" }
gpui_linux = { path = "crates/gpui_linux" }
gpui_macos = { path = "crates/gpui_macos" }
gpui_macros = { path = "crates/gpui_macros" }
gpui_platform = { path = "crates/gpui_platform" }
gpui_tokio = { path = "crates/gpui_tokio" }
gpui_util = { path = "crates/gpui_util" }
gpui_web = { path = "crates/gpui_web" }
gpui_wgpu = { path = "crates/gpui_wgpu" }
gpui_windows = { path = "crates/gpui_windows" }
grammars = { path = "crates/grammars" }
handlebars = "=5.1.2"
heapless = "=0.9.2"
heck = "=0.5.0"
heed = "=0.21.0"
hex = "=0.4.3"
html5ever = "=0.35.0"
html_to_markdown = { path = "crates/html_to_markdown" }
http = "=1.3.1"
http-body = "=1.0.1"
http_client = { path = "crates/http_client" }
http_client_tls = { path = "crates/http_client_tls" }
human_bytes = "=0.4.3"
icons = { path = "crates/icons" }
ignore = "=0.4.24"
image = "=0.25.8"
image_viewer = "=0.1.0"
imara-diff = "=0.1.8"
indexmap = "=2.11.4"
indoc = "=2.0.6"
inspector_ui = "=0.1.0"
install_cli = { path = "crates/install_cli" }
inventory = "=0.3.21"
itertools = "=0.14.0"
journal = "=0.1.0"
json_schema_store = { path = "crates/json_schema_store" }
jsonschema = "=0.37.4"
jsonwebtoken = "=10.3.0"
keymap_editor = "=0.1.0"
language = { path = "crates/language" }
language_core = { path = "crates/language_core" }
language_extension = { path = "crates/language_extension" }
language_model = { path = "crates/language_model" }
language_models = { path = "crates/language_models" }
language_onboarding = { path = "crates/language_onboarding" }
language_selector = "=0.1.0"
language_tools = { path = "crates/language_tools" }
languages = { path = "crates/languages" }
libc = "=0.2.182"
libsqlite3-sys = "=0.30.1"
libwebrtc = "=0.3.26"
line_ending_selector = "=0.1.0"
linkify = "=0.10.0"
livekit = "=0.7.32"
livekit_api = { path = "crates/livekit_api" }
livekit_client = { path = "crates/livekit_client" }
lmstudio = { path = "crates/lmstudio" }
log = "=0.4.29"
lsp = { path = "crates/lsp" }
lsp-types = "=0.95.1"
mach2 = "=0.5.0"
markdown = { path = "crates/markdown" }
markdown_preview = "=0.1.0"
markup5ever_rcdom = "=0.3.0"
media = { path = "crates/media" }
menu = { path = "crates/menu" }
mermaid-rs-renderer = "=0.2.0"
metal = "=0.33.0"
migrator = { path = "crates/migrator" }
minidumper = "=0.9.0"
miniprofiler_ui = { path = "crates/miniprofiler_ui" }
mistral = { path = "crates/mistral" }
moka = "=0.12.11"
multi_buffer = { path = "crates/multi_buffer" }
naga = "=29.0.0"
nanoid = "=0.4.0"
nc = { path = "crates/nc" }
net = { path = "crates/net" }
nix = "=0.30.1"
node_runtime = { path = "crates/node_runtime" }
notifications = "=0.1.0"
objc = "=0.2.7"
objc2-foundation = "=0.3.2"
ollama = { path = "crates/ollama" }
onboarding = "=0.1.0"
open = "=5.3.2"
open_ai = { path = "crates/open_ai" }
open_path_prompt = "=0.1.0"
open_router = { path = "crates/open_router" }
opencode = { path = "crates/opencode" }
ordered-float = "=4.6.0"
outline = "=0.1.0"
outline_panel = "=0.1.0"
palette = "=0.7.6"
panel = { path = "crates/panel" }
parking_lot = "=0.12.5"
partial-json-fixer = "=0.5.3"
pathdiff = "=0.2.3"
paths = { path = "crates/paths" }
pciid-parser = "=0.8.0"
percent-encoding = "=2.3.2"
perf = { path = "crates/perf" }
pet = { path = "crates/pet" }
pet-conda = { path = "crates/pet-conda" }
pet-core = { path = "crates/pet-core" }
pet-fs = { path = "crates/pet-fs" }
pet-poetry = { path = "crates/pet-poetry" }
pet-reporter = { path = "crates/pet-reporter" }
pet-virtualenv = { path = "crates/pet-virtualenv" }
picker = "=0.1.0"
platform_title_bar = "=0.1.0"
pollster = "=0.4.0"
portable-pty = "=0.9.0"
postage = "=0.5.0"
prettier = { path = "crates/prettier" }
pretty_assertions = "=1.4.1"
proc-macro2 = "=1.0.101"
profiling = "=1.0.17"
project = { path = "crates/project" }
project_panel = "=0.1.0"
project_symbols = { path = "crates/project_symbols" }
prompt_store = { path = "crates/prompt_store" }
proptest = "=1.10.0"
prost = "=0.12.6"
prost-build = "=0.12.6"
prost-types = "=0.12.6"
proto = { path = "crates/proto" }
pulldown-cmark = "=0.13.0"
quorp_actions = { path = "crates/zed_actions" }
quorp_env_vars = { path = "crates/zed_env_vars" }
quote = "=1.0.41"
rand = "=0.9.2"
rayon = "=1.11.0"
recent_projects = "=0.1.0"
refineable = { path = "crates/refineable" }
regex = "=1.12.2"
release_channel = { path = "crates/release_channel" }
remote = { path = "crates/remote" }
remote_connection = { path = "crates/remote_connection" }
remote_server = { path = "crates/remote_server" }
repl = "=0.1.0"
reqwest = "=0.12.24"
reqwest_client = { path = "crates/reqwest_client" }
rodio = "=0.21.1"
rope = { path = "crates/rope" }
rpc = { path = "crates/rpc" }
rsa = "=0.9.10"
rust-embed = "=8.7.2"
rustc-hash = "=2.1.1"
rustls = "=0.23.33"
rustls-platform-verifier = "=0.5.3"
scap = "*"
scheduler = { path = "crates/scheduler" }
schemars = "=1.0.4"
search = "=0.1.0"
semver = "=1.0.27"
serde = "=1.0.228"
serde_json = "=1.0.145"
serde_json_lenient = "=0.2.4"
serde_path_to_error = "=0.1.20"
serde_urlencoded = "=0.7.1"
session = { path = "crates/session" }
settings = { path = "crates/settings" }
settings_content = { path = "crates/settings_content" }
settings_json = { path = "crates/settings_json" }
settings_macros = { path = "crates/settings_macros" }
settings_profile_selector = "=0.1.0"
settings_ui = "=0.1.0"
sha2 = "=0.10.9"
shell_command_parser = { path = "crates/shell_command_parser" }
shellexpand = "=3.1.1"
shlex = "=1.3.0"
sidebar = "=0.1.0"
simplelog = "=0.12.2"
slotmap = "=1.0.7"
smallvec = "=1.15.1"
smol = "=2.0.2"
snippet = { path = "crates/snippet" }
snippet_provider = { path = "crates/snippet_provider" }
snippets_ui = "=0.1.0"
sqlez = { path = "crates/sqlez" }
sqlez_macros = { path = "crates/sqlez_macros" }
sqlformat = "=0.2.6"
stacksafe = "=0.1.4"
story = { path = "crates/story" }
streaming-iterator = "=0.1.9"
streaming_diff = { path = "crates/streaming_diff" }
strsim = "=0.11.1"
strum = "=0.28.0"
sum_tree = { path = "crates/sum_tree" }
svg_preview = "=0.1.0"
syn = "=2.0.117"
sys-locale = "=0.3.2"
sysinfo = "=0.37.2"
system_specs = { path = "crates/system_specs" }
tab_switcher = "=0.1.0"
take-until = "=0.2.0"
task = { path = "crates/task" }
tasks_ui = "=0.1.0"
telemetry = { path = "crates/telemetry" }
telemetry_events = { path = "crates/telemetry_events" }
tempfile = "=3.23.0"
terminal = { path = "crates/terminal" }
terminal_view = "=0.1.0"
text = { path = "crates/text" }
theme = { path = "crates/theme" }
theme_extension = { path = "crates/theme_extension" }
theme_selector = "=0.1.0"
thiserror = "=2.0.17"
tiktoken-rs = "=0.9.1"
time = "=0.3.47"
time_format = { path = "crates/time_format" }
tiny_http = "=0.12.0"
title_bar = "=0.1.0"
tokio = "=1.48.0"
tokio-socks = "=0.5.2"
toml = "=0.9.8"
toml_edit = "=0.23.7"
toolchain_selector = { path = "crates/toolchain_selector" }
tower-http = "=0.6.6"
tracing = "=0.1.43"
tree-sitter = "=0.26.3"
tree-sitter-bash = "=0.25.1"
tree-sitter-c = "=0.24.1"
tree-sitter-cpp = "=0.23.4"
tree-sitter-css = "=0.23.2"
tree-sitter-diff = "=0.1.0"
tree-sitter-elixir = "=0.3.4"
tree-sitter-embedded-template = "=0.23.2"
tree-sitter-gitcommit = "=0.5.0"
tree-sitter-go = "=0.25.0"
tree-sitter-go-mod = { package = "tree-sitter-gomod", version = "=1.0.1" }
tree-sitter-gowork = { path = "crates/tree-sitter-gowork" }
tree-sitter-heex = "=0.8.1"
tree-sitter-html = "=0.23.2"
tree-sitter-jsdoc = "=0.23.2"
tree-sitter-json = "=0.24.8"
tree-sitter-md = "=0.3.2"
tree-sitter-python = "=0.25.0"
tree-sitter-regex = "=0.24.3"
tree-sitter-ruby = "=0.23.1"
tree-sitter-rust = "=0.24.1"
tree-sitter-typescript = "=0.23.2"
tree-sitter-yaml = "=0.6.1"
ui = "=0.1.0"
ui_input = { path = "crates/ui_input" }
ui_prompt = { path = "crates/ui_prompt" }
unicase = "=2.8.1"
unicode-segmentation = "=1.12.0"
unicode-width = "=0.2.0"
unindent = "=0.2.4"
url = "=2.5.7"
urlencoding = "=2.1.3"
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
uuid = "=1.18.1"
vercel = { path = "crates/vercel" }
vim = "=0.1.0"
vim_mode_setting = "=0.1.0"
walkdir = "=2.5.0"
wasm-bindgen = "=0.2.113"
wasm-encoder = "=0.244.0"
wasmparser = "=0.244.0"
wasmtime = "=33.0.2"
wasmtime-wasi = "=33.0.2"
watch = { path = "crates/watch" }
wax = "=0.7.0"
web-time = "=1.1.0"
web_search = { path = "crates/web_search" }
web_search_providers = { path = "crates/web_search_providers" }
webrtc-sys = "=0.3.23"
wgpu = "=29.0.0"
which = "=6.0.3"
which_key = "=0.1.0"
windows = "=0.62.2"
windows-core = "=0.62.2"
workspace = "=0.1.0"
worktree = { path = "crates/worktree" }
x_ai = { path = "crates/x_ai" }
yawc = "=0.2.5"
zeroize = "=1.8.2"
zeta_prompt = { path = "crates/zeta_prompt" }
zlog = { path = "crates/zlog" }
zlog_settings = { path = "crates/zlog_settings" }
zstd = "=0.11.2+zstd.1.5.2"
ztracing = { path = "crates/ztracing" }
ztracing_macro = { path = "crates/ztracing_macro" }
