[workspace]
resolver = "2"
members = [
    "crates/collections",
    "crates/flash_moe_defaults",
    "crates/paths",
    "crates/perf",
    "crates/quorp",
    "crates/quorp_agent_core",
    "crates/zlog-compat",
    "crates/util",
    "crates/util_macros",
    "crates/zlog",
    "crates/ztracing-compat",
    "crates/ztracing",
    "crates/ztracing_macro",
]
default-members = ["crates/quorp"]

[workspace.package]
publish = false
edition = "2024"
rust-version = "1.93"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("schemars"))'] }

[profile.managed]
inherits = "dev"
debug = 0
strip = "debuginfo"
incremental = false

[workspace.dependencies]
anyhow = "=1.0.100"
ashpd = "=0.13.2"
async-fs = "=2.2.0"
async_zip = "=0.0.18"
chrono = "=0.4.42"
clap = "=4.5.49"
collections = { path = "crates/collections" }
dirs = "=6.0.0"
dunce = "=1.0.5"
flash_moe_defaults = { path = "crates/flash_moe_defaults" }
futures = "=0.3.31"
futures-lite = "=2.6.1"
globset = "=0.4.17"
ignore = "=0.4.24"
image = "=0.25.8"
indexmap = "=2.11.4"
itertools = "=0.14.0"
libc = "=0.2.182"
log = "=0.4.29"
mach2 = "=0.5.0"
nix = "=0.30.1"
paths = { path = "crates/paths" }
percent-encoding = "=2.3.2"
perf = { path = "crates/perf" }
portable-pty = "=0.9.0"
pretty_assertions = "=1.4.1"
quote = "=1.0.41"
rand = "=0.9.2"
regex = "=1.12.2"
reqwest = "=0.12.24"
rust-embed = { version = "=8.7.2", features = ["include-exclude"] }
rustc-hash = "=2.1.1"
schemars = "=1.0.4"
serde = "=1.0.228"
serde_json = "=1.0.145"
serde_json_lenient = "=0.2.4"
shlex = "=1.3.0"
smol = "=2.0.2"
syn = "=2.0.117"
take-until = "=0.2.0"
tempfile = "=3.23.0"
toml = "=0.8.23"
toml_edit = "=0.22.27"
tokio = "=1.48.0"
tracing = "=0.1.43"
unicase = "=2.8.1"
unicode-width = "=0.2.0"
url = "=2.5.7"
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
walkdir = "=2.5.0"
which = "=6.0.3"
quorp_log = { path = "crates/zlog" }
quorp_tracing = { path = "crates/ztracing" }
zlog = { path = "crates/zlog-compat" }
ztracing = { path = "crates/ztracing-compat" }
ztracing_macro = { path = "crates/ztracing_macro" }
