[workspace]
resolver = "2"
members = [
    "crates/collections",
    "crates/paths",
    "crates/perf",
    "crates/quorp",
    "crates/quorp_agent_core",
    "crates/quorp_agent_protocol",
    "crates/quorp_benchmark",
    "crates/quorp_config",
    "crates/quorp_context",
    "crates/quorp_context_model",
    "crates/quorp_core",
    "crates/quorp_ids",
    "crates/quorp_mcp",
    "crates/quorp_memory",
    "crates/quorp_memory_model",
    "crates/quorp_patch_model",
    "crates/quorp_patch_vm",
    "crates/quorp_permissions",
    "crates/quorp_plan_mode",
    "crates/quorp_provider",
    "crates/quorp_lsp",
    "crates/quorp_render",
    "crates/quorp_repo_graph",
    "crates/quorp_repo_scan",
    "crates/quorp_rule_forge",
    "crates/quorp_rule_model",
    "crates/quorp_rust_intel",
    "crates/quorp_sandbox",
    "crates/quorp_slash",
    "crates/quorp_storage",
    "crates/quorp_term",
    "crates/quorp_tools",
    "crates/quorp_verify",
    "crates/quorp_verify_model",
    "crates/zlog-compat",
    "crates/util",
    "crates/util_macros",
    "crates/zlog",
    "crates/ztracing-compat",
    "crates/ztracing",
    "crates/ztracing_macro",
]
default-members = ["crates/quorp"]

[workspace.package]
publish = false
edition = "2024"
rust-version = "1.93"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("schemars"))'] }

[profile.managed]
inherits = "dev"
debug = 0
strip = "debuginfo"
incremental = false

[workspace.dependencies]
anyhow = "=1.0.100"
ashpd = "=0.13.2"
async-fs = "=2.2.0"
async_zip = "=0.0.18"
chrono = "=0.4.42"
clap = "=4.5.49"
collections = { path = "crates/collections" }
dirs = "=6.0.0"
dunce = "=1.0.5"
futures = "=0.3.31"
futures-lite = "=2.6.1"
globset = "=0.4.17"
ignore = "=0.4.24"
image = "=0.25.8"
indexmap = "=2.11.4"
itertools = "=0.14.0"
libc = "=0.2.182"
log = "=0.4.29"
mach2 = "=0.5.0"
nix = "=0.30.1"
paths = { path = "crates/paths" }
percent-encoding = "=2.3.2"
perf = { path = "crates/perf" }
portable-pty = "=0.9.0"
pretty_assertions = "=1.4.1"
quorp_agent_core = { path = "crates/quorp_agent_core" }
quorp_agent_protocol = { path = "crates/quorp_agent_protocol" }
quorp_benchmark = { path = "crates/quorp_benchmark" }
quorp_config = { path = "crates/quorp_config" }
quorp_context = { path = "crates/quorp_context" }
quorp_context_model = { path = "crates/quorp_context_model" }
quorp_core = { path = "crates/quorp_core" }
quorp_ids = { path = "crates/quorp_ids" }
quorp_mcp = { path = "crates/quorp_mcp" }
quorp_memory = { path = "crates/quorp_memory" }
quorp_memory_model = { path = "crates/quorp_memory_model" }
quorp_patch_model = { path = "crates/quorp_patch_model" }
quorp_patch_vm = { path = "crates/quorp_patch_vm" }
quorp_permissions = { path = "crates/quorp_permissions" }
quorp_plan_mode = { path = "crates/quorp_plan_mode" }
quorp_provider = { path = "crates/quorp_provider" }
quorp_lsp = { path = "crates/quorp_lsp" }
quorp_render = { path = "crates/quorp_render" }
quorp_repo_graph = { path = "crates/quorp_repo_graph" }
quorp_repo_scan = { path = "crates/quorp_repo_scan" }
quorp_rule_forge = { path = "crates/quorp_rule_forge" }
quorp_rule_model = { path = "crates/quorp_rule_model" }
quorp_rust_intel = { path = "crates/quorp_rust_intel" }
quorp_sandbox = { path = "crates/quorp_sandbox" }
quorp_slash = { path = "crates/quorp_slash" }
quorp_storage = { path = "crates/quorp_storage" }
quorp_term = { path = "crates/quorp_term" }
quorp_tools = { path = "crates/quorp_tools" }
quorp_verify = { path = "crates/quorp_verify" }
quorp_verify_model = { path = "crates/quorp_verify_model" }
thiserror = "=2.0.18"
quote = "=1.0.41"
rand = "=0.9.2"
regex = "=1.12.2"
reqwest = "=0.12.24"
rust-embed = { version = "=8.7.2", features = ["include-exclude"] }
rustc-hash = "=2.1.1"
schemars = "=1.0.4"
serde = "=1.0.228"
serde_json = "=1.0.145"
serde_json_lenient = "=0.2.4"
shlex = "=1.3.0"
sha2 = "=0.10.9"
smol = "=2.0.2"
syn = "=2.0.117"
take-until = "=0.2.0"
tempfile = "=3.23.0"
toml = "=0.8.23"
toml_edit = "=0.22.27"
tokio = "=1.48.0"
tracing = "=0.1.43"
unicase = "=2.8.1"
unicode-width = "=0.2.0"
url = "=2.5.7"
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
walkdir = "=2.5.0"
which = "=6.0.3"
quorp_log = { path = "crates/zlog" }
quorp_tracing = { path = "crates/ztracing" }
zlog = { path = "crates/zlog-compat" }
ztracing = { path = "crates/ztracing-compat" }
ztracing_macro = { path = "crates/ztracing_macro" }
