[package]
name = "agent_ui"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/agent_ui.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
prompt_store.workspace = true
workspace.workspace = true
fs.workspace = true
client.workspace = true
language.workspace = true

[features]
test-support = []
