[package]
name = "quorp_extension_api"
version = "0.8.0"
description = "APIs for creating Quorp extensions in Rust"
repository = "https://github.com/quorp-industries/quorp"
documentation = "https://docs.rs/quorp_extension_api"
keywords = ["quorp", "extension"]
edition.workspace = true
# Change back to `true` when we're ready to publish v0.8.0.
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/extension_api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.41"

[package.metadata.component]
target = { path = "wit" }
