[package]
name = "gpui_platform"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_platform.rs"

[features]
default = []
native = [
    "dep:gpui_macos",
    "dep:gpui_windows",
    "dep:gpui_linux",
]
font-kit = ["native", "gpui_macos/font-kit"]
test-support = ["gpui/test-support", "native", "gpui_macos/test-support"]
screen-capture = [
    "gpui/screen-capture",
    "native",
    "gpui_macos/screen-capture",
    "gpui_windows/screen-capture",
    "gpui_linux/screen-capture",
]
runtime_shaders = ["native", "gpui_macos/runtime_shaders"]
wayland = ["native", "gpui_linux/wayland"]
x11 = ["native", "gpui_linux/x11"]

[dependencies]
gpui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
gpui_macos = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
gpui_windows = { workspace = true, optional = true }
gpui = { workspace = true, features = ["windows-manifest"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui_linux = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
gpui_web.workspace = true
console_error_panic_hook = "0.1.7"
