[package]
description = "Shared protocol for communication between the Quorp app and the quorp.dev server"
edition.workspace = true
name = "proto"
version = "0.1.0"
publish.workspace = true
license = "GPL-3.0-or-later"

[features]
test-support = []

[lints]
workspace = true

[lib]
path = "src/proto.rs"
doctest = false

[dependencies]
anyhow.workspace = true
prost.workspace = true
serde.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
