[package]
description = "The rich terminal Quorp experience."
edition.workspace = true
name = "quorp"
version = "0.231.0"
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]
default-run = "quorp"

[lints]
workspace = true

[features]
tracy = ["ztracing/tracy"]
test-support = []

[[bin]]
name = "quorp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
crossterm = "0.28"
flash_moe_defaults.workspace = true
futures.workspace = true
ignore.workspace = true
image.workspace = true
log.workspace = true
notify = "=8.2.0"
paths.workspace = true
portable-pty.workspace = true
ratatui = "0.29"
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
syntect = "5"
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
unicode-width.workspace = true
url.workspace = true
util.workspace = true
zlog.workspace = true
ztracing.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd.workspace = true

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.22"

[dev-dependencies]
image.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true

[package.metadata.bundle-dev]
icon = ["resources/app-icon-dev@2x.png", "resources/app-icon-dev.png"]
identifier = "dev.quorp.Quorp-Dev"
name = "Quorp Dev"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["quorp"]

[package.metadata.bundle-nightly]
icon = ["resources/app-icon-nightly@2x.png", "resources/app-icon-nightly.png"]
identifier = "dev.quorp.Quorp-Nightly"
name = "Quorp Nightly"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["quorp"]

[package.metadata.bundle-preview]
icon = ["resources/app-icon-preview@2x.png", "resources/app-icon-preview.png"]
identifier = "dev.quorp.Quorp-Preview"
name = "Quorp Preview"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["quorp"]

[package.metadata.bundle-stable]
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
identifier = "dev.quorp.Quorp"
name = "Quorp"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["quorp"]

[package.metadata.cargo-machete]
ignored = ["ztracing"]
