[package]
name = "quorp_agent_core"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
futures.workspace = true
ignore.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
