[package]
name = "quorp_agent_core"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
ignore.workspace = true
log.workspace = true
quorp_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
shlex.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
