[package]
name = "quorp_agent_protocol"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lib]
path = "src/quorp_agent_protocol.rs"

[lints]
workspace = true

[dependencies]
quorp_ids = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
