[package]
name = "quorp_benchmark"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
quorp_agent_core = { path = "../quorp_agent_core" }
quorp_core.workspace = true
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
