[package]
name = "quorp_context"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["Quorp Team <hi@quorp.dev>"]

[lib]
path = "src/quorp_context.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
globset.workspace = true
quorp_context_model = { workspace = true }
quorp_ids = { workspace = true }
quorp_memory = { workspace = true }
quorp_memory_model = { workspace = true }
quorp_repo_graph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
